src/app/_components/Skills/techStack.module.scss
@use "../../../styles/variables" as v;
@use "../../../styles/mixins" as m;

.skillsSection {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  min-width: 100dvw;
  overflow: hidden;
  min-height: 100dvh;
  &::after {
    content: " ";
    left: 0;
    bottom: 0;
    width: 30%;
    height: 80%;
    position: absolute;
    z-index: -1;
    background: linear-gradient(125deg, rgb(0, 255, 255) 0%, deeppink 35%);
    -webkit-mask: radial-gradient(circle at 5% 30%, red 0%, transparent 25%);
    animation: bubble 3s infinite ease-in-out,
      colorShift 10s infinite ease-in-out;
  }
  &::before {
    content: " ";
    left: 65%;
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: -1;
    background: linear-gradient(125deg, aqua 13%, deeppink 38%);
    -webkit-mask: radial-gradient(circle at 30% 50%, red 0%, transparent 25%);
    animation: bubble 10s infinite ease-in-out;
  }

  h1 {
    @include m.title-style;
  }

  .techSlider {
    display: flex;
    overflow: hidden;
    padding: 1.9rem;

    .techSlide {
      display: flex;
      gap: 1rem;
      animation: 31.5s slideEffect infinite linear;
      width: fit-content;
      white-space: nowrap;
      position: relative;
      &:hover {
        animation-play-state: paused;
      }

      .tech {
        min-width: 280px;
        height: 280px;
        display: inline-flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 2rem;
        padding: 1rem;
        color: v.$primary-accent;
        background-color: v.$secondary-background;
        box-shadow: 0px 0px 16px v.$secondary-background;
        border-radius: 1rem;
        margin: 0 20px;
        transition: all 0.25s ease-in-out;

        h3 {
          font-size: 1.6rem;
        }

        &:hover {
          cursor: pointer;
          transform: scale(1.05) translateY(-3.5px);
          box-shadow: 0px 0px 16px white;
        }

        .techIcon {
          width: 85px;
          height: 85px;
        }
      }
    }

    &::after {
      content: "";
      display: inline-block;
      width: 100%;
    }
    &::before {
      display: block;
      content: " ";
      position: absolute;
      z-index: 1000;

      width: 100%;
      height: 280px;
      left: 0;
    }
  }
}

@keyframes slideEffect {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

@keyframes bubble {
  0%,
  100% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.05);
  }
}

